# numerical

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
dekker/: dekker.py  tarefas.py
interpolation/: spline.py
numerical/chem/: solver.py
numerical/interpolate/: barycentric.py  matrix.py  spline.py
numerical/matrix/: README.md  factorization.py  linear_space.py  linear_sys.py
numerical/roots/: dekker.py
tests/: dekker_test.py  matrix_test.py  qr_test.py  solver_test.py  spline_test.py  test_dekker.py  test_interactive_dekker.py  test_matrix.py  test_spline.py
tests/qr_data/: ex1.txt  ex2.txt  ex3.txt  ex4.txt
zeros/: tarefas.py
