[tool.poetry]
name = "numerical"
version = "0.1.0"
description = "Numerical methods"
authors = ["Luiz Mugnaini <luizmugnaini@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
scipy = "^1.9.3"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
