[metadata]
name = numerical-luizmugnaini
description = Numerical methods class projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/luizmugnaini/numerical

[options]
test_suite = tests
packages =
    numerical
    numerical.roots
    numerical.interpolate
python_requires = >=3.7
